fix message preview vertical alignment

--- a/client/src/app/features/chats/chat/chat.component.scss
+++ b/client/src/app/features/chats/chat/chat.component.scss
@@ -40,6 +40,7 @@
   margin-bottom: 0;
   display: inline-block;
   max-width: 80%;
+  vertical-align: top;
 
   overflow: hidden;
   text-overflow: ellipsis;
